# beacon-protocol

./: .git_log_dump.txt  .gitignore  PRD_TRD.md  README.md  docker-compose.yml  render.yaml  test-agent.ts  test_anomaly.py
.github/workflows/: ci.yml
beacon-agent-example/: main.py
beacon-backend/: Dockerfile  check-api.ts  check-db.ts  package-lock.json  package.json  tsconfig.json
beacon-backend/prisma/: schema.prisma  seed.ts
beacon-backend/src/: app.ts  server.ts
beacon-backend/src/jobs/: notification.job.ts  timeout.job.ts
beacon-backend/src/lib/: schema-validator.ts  urgency-calculator.ts
beacon-backend/src/services/: notification.service.ts  queue.service.ts  websocket.service.ts
beacon-dashboard/: Dockerfile  package-lock.json  package.json  tailwind.config.js
beacon-dashboard/src/: App.tsx  index.css  main.tsx
beacon-dashboard/src/hooks/: useSignals.ts
beacon-dashboard/src/pages/: Dashboard.tsx  Login.tsx  Settings.tsx
beacon-dashboard/src/store/: auth.store.ts  signal.store.ts
beacon-mcp/: package-lock.json  package.json
beacon-mcp/src/: index.ts
beacon-sdk/: package-lock.json  package.json
beacon-sdk-python/: README.md  pyproject.toml
beacon-sdk-python/beacon_sdk/: __init__.py  client.py  models.py
beacon-sdk-python/beacon_sdk/adapters/: __init__.py  langchain.py
beacon-sdk-python/tests/: test_client.py
beacon-sdk/src/: client.ts  index.ts  types.ts
beacon-sdk/src/adapters/: langchain.ts
docs/: APP_FLOW.md  BACKEND_SCHEMA.md  IMPLEMENTATION_PLAN.md  PRD.md  TRD.md  UI_UX_BRIEF.md
(+11 files in other folders)
